# satoru

./: .gitignore  README.md  biome.json  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/app/src/: main.tsx  routeTree.gen.ts
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/src/: main.rs
apps/app/src-tauri/src/commands/: delete_server.rs  get_servers.rs  get_system_info.rs  install_java.rs  mod.rs  open_folder.rs  run_server_command.rs  start_server.rs
apps/app/src-tauri/src/utils/: create_folder.rs  create_ngrok_session.rs  get_server_jar_download_url.rs  mod.rs  run_ngrok.rs  run_server.rs
src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  eula.txt  server.properties  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: accept_terms.rs  create_server.rs  delete_server.rs  download_server_jar.rs  download_spigot.rs  get_java_version.rs  get_minecraft_versions.rs  get_server.rs  get_server_logs.rs  get_server_status.rs  get_servers.rs  mod.rs  open_folder.rs  run_server.rs  run_server_command.rs  save_server_settings.rs  start_server.rs  stop_server.rs
src-tauri/src/data/: mod.rs  servers.rs
src-tauri/src/utils/: create_folder.rs  creation_flags.rs  get_server_properties.rs  mod.rs  run_ngrok.rs  run_server.rs
src/components/: icons.tsx  providers.tsx  sidebar.tsx
src/components/layout/: header.tsx  sidebar.tsx
src/components/servers/: eula-form.tsx  eula.tsx  (+16 more)
src/constants/: dificulty.ts  softwares.ts
src/hooks/: use-minecraft-versions.ts  use-servers.ts
src/lib/: tanstack-query.ts
src/routes/: __root.tsx  index.tsx  settings.lazy.tsx
src/store/: settings.ts
src/styles/: globals.css
src/utils/: get-server-path.ts  get-settings.ts
(+113 files in other folders)
