[package]
name = "satoru"
version = "0.0.0"
description = "Satoru"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "path-all", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = "0.12.4"
open = "5.1.4"
once_cell = "1.19.0"
sysinfo = "0.30.12"
regex = "1.10.5"
ngrok = "0.14.0-pre.13"
chrono = "0.4.38"
tokio = "1.38.0"
scraper = "0.19.0"
process-wrap = { version = "8.0.2", features = ["std"] }
windows = { version = "0.56.0", features = ["Win32_System_Threading"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
